fix: countrypage overlay layout bug

--- a/src/Pages/CountryPage/CountryPage.scss
+++ b/src/Pages/CountryPage/CountryPage.scss
@@ -8,7 +8,7 @@
     @media screen and (min-width: 1024px) {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
-      grid-template-rows: 10vh 20vh 50vh min-content;
+      grid-template-rows: 20vh 20vh 50vh min-content;
       row-gap: 3vh;
       margin: 0px auto;
       max-width: 1280px;
